added the flags for publishing

--- a/packages/entando-router/package.json
+++ b/packages/entando-router/package.json
@@ -19,6 +19,9 @@
     "!test"
   ],
   "main": "modules/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
