--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
     "clean": "lerna clean",
-    "lint": "lerna exec npm run lint",
-    "test": "lerna exec npm run test",
+    "lint": "lerna run lint",
+    "test": "lerna run test",
     "precommit": "npm run lint && npm run test"
   },
   "devDependencies": {
