--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "lerna clean",
     "lint": "lerna run lint",
     "test": "lerna run test",
+    "build": "lerna run build",
     "precommit": "npm run lint && npm run test"
   },
   "devDependencies": {
