--- a/packages/entando-apimanager/package.json
+++ b/packages/entando-apimanager/package.json
@@ -65,10 +65,13 @@
     ]
   },
   "dependencies": {
+    "@entando/messages": "^1.0.0",
     "@entando/router": "^1.0.1",
     "@entando/utils": "^1.0.5",
+    "lodash": "^4.17.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "whatwg-fetch": "^2.0.4"
   }
 }
