--- a/packages/entando-ddtable/package.json
+++ b/packages/entando-ddtable/package.json
@@ -42,7 +42,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.9.0",
+    "patternfly-react": "^1.19.1"
   },
   "jest": {
     "moduleFileExtensions": [
