--- a/packages/entando-router/package.json
+++ b/packages/entando-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@entando/router",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "LGPL-2.1",
   "description": "router used with redux for entando frontend applications",
   "keywords": [
@@ -31,6 +31,7 @@
     "babel-eslint": "^8.2.2",
     "babel-jest": "^22.4.3",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react-app": "^3.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
