--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "lerna run lint",
     "test": "lerna run test",
     "build": "lerna run build",
+    "coverage": "lerna run coverage",
     "precommit": "npm run lint && npm run test",
     "publish": "lerna publish --yes"
   },
