--- a/packages/entando-apimanager/package.json
+++ b/packages/entando-apimanager/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "@entando/messages": "^1.0.4",
     "@entando/utils": "^1.2.0",
+    "@shoutem/fetch-token-intercept": "^0.2.2",
     "lodash": "^4.17.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
