--- a/packages/entando-menu/package.json
+++ b/packages/entando-menu/package.json
@@ -75,9 +75,9 @@
     ]
   },
   "dependencies": {
-    "@entando/router": "^1.1.2",
     "patternfly-react": "^1.19.1",
     "react": "^16.3.0",
-    "react-intl": "^2.4.0"
+    "react-intl": "^2.4.0",
+    "react-router-dom": "^5.0.0"
   }
 }
