fixed the export

--- a/packages/entando-log/package.json
+++ b/packages/entando-log/package.json
@@ -21,7 +21,7 @@
     "!test",
     "!modules"
   ],
-  "main": "dist/js/index.js",
+  "main": "dist/index.js",
   "publishConfig": {
     "access": "public"
   },
