ENG-90 fix naming and passed function checking

--- a/packages/entando-pagetreeselector/package.json
+++ b/packages/entando-pagetreeselector/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entando-pagetreeselector",
+  "name": "@entando/pagetreeselector",
   "version": "1.0.0",
   "description": "Page Tree Selector React Component Used in Entando Projects",
   "main": "dist/js/index.js",
