--- a/packages/entando-pagetreeselector/package.json
+++ b/packages/entando-pagetreeselector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@entando/pagetreeselector",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Page Tree Selector React Component Used in Entando Projects",
   "main": "dist/js/index.js",
   "scripts": {
@@ -34,17 +34,17 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^23.5.0",
+    "jest-enzyme": "^6.0.0",
     "node-sass": "^4.9.0",
-    "patternfly-react": "^1.19.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "jest-enzyme": "^6.0.0"
+    "patternfly-react": "^1.19.1"
   },
   "jest": {
     "moduleFileExtensions": [
