ENG-72 ApiProvider changes + test added, renaming methods in apimanager

--- a/packages/entando-apimanager/package.json
+++ b/packages/entando-apimanager/package.json
@@ -46,7 +46,8 @@
     ],
     "moduleDirectories": [
       "node_modules",
-      "modules"
+      "modules",
+      "test"
     ],
     "collectCoverageFrom": [
       "modules/**/*.{js}"
