--- a/packages/entando-datatable/package.json
+++ b/packages/entando-datatable/package.json
@@ -15,7 +15,7 @@
     "test": "jest --env=jsdom",
     "lint": "eslint ./modules",
     "coverage": "jest --env=jsdom --coverage",
-    "build": "babel modules -d dist",
+    "build": "babel modules -d dist && node-sass --output-style compressed sass/index.scss -o dist/css",
     "prepublish": "npm run build"
   },
   "repository": "https://github.com/entando/frontend-libraries",
