--- a/packages/entando-datatable/package.json
+++ b/packages/entando-datatable/package.json
@@ -26,12 +26,16 @@
     "!sass"
   ],
   "devDependencies": {
+    "@testing-library/dom": "^7.26.5",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
@@ -41,10 +45,6 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^23.5.0",
     "node-sass": "^4.9.0",
-    "@testing-library/dom": "^7.26.5",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.2.0",
     "react-test-renderer": "^16.14.0"
   },
   "jest": {
@@ -92,9 +92,9 @@
     "patternfly-react": "^1.19.1"
   },
   "dependencies": {
+    "@entando/ddtable": "^1.0.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-table": "^7.6.3",
-    "@entando/ddtable": "^1.0.4"
+    "react-table": "^7.6.3"
   }
 }
