ENG-2024 row select feature + unit tests + sorting feature in progress

--- a/packages/entando-datatable/package.json
+++ b/packages/entando-datatable/package.json
@@ -64,7 +64,12 @@
     ],
     "testMatch": [
       "<rootDir>/test/**/?(*.)(spec|test).{js}"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^react-dnd$": "react-dnd/dist/cjs",
+      "^react-dnd-html5-backend$": "react-dnd-html5-backend/dist/cjs",
+      "^dnd-core$": "dnd-core/dist/cjs"
+    }
   },
   "publishConfig": {
     "access": "public"
