--- a/packages/entando-ddtable/package.json
+++ b/packages/entando-ddtable/package.json
@@ -54,6 +54,11 @@
       "modules",
       "test"
     ],
+    "moduleNameMapper": {
+      "^react-dnd$": "react-dnd/dist/cjs",
+      "^react-dnd-html5-backend$": "react-dnd-html5-backend/dist/cjs",
+      "^dnd-core$": "dnd-core/dist/cjs"
+    },
     "collectCoverageFrom": [
       "modules/**/*.{js}"
     ],
