--- a/packages/entando-mfecommunication/package.json
+++ b/packages/entando-mfecommunication/package.json
@@ -1,19 +1,36 @@
 {
   "name": "entando-mfecommunication",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "license": "LGPL-2.1",
+  "description": "mfe communications manager used in entando ecosystem",
+  "keywords": [
+    "entando",
+    "mfe",
+    "mfe-communication",
+    "communication",
+    "communication-manager",
+    "mediator"
+  ],
+  "repository": "https://github.com/entando/frontend-libraries",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublish": "npm run build"
   },
   "dependencies": {
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
+    "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -24,5 +41,18 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
+  },
+  "files": [
+    "dist",
+    "!test",
+    "!modules"
+  ],
+  "main": "./dist/entando-mfecommunication.umd.cjs",
+  "module": "./dist/entando-mfecommunication.js",
+  "exports": {
+    ".": {
+      "import": "./dist/entando-mfecommunication.js",
+      "require": "./dist/entando-mfecommunication.umd.cjs"
+    }
   }
 }
