--- a/packages/entando-mfecommunication/package.json
+++ b/packages/entando-mfecommunication/package.json
@@ -19,7 +19,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "vitest"
   },
   "dependencies": {
     "path": "^0.12.7",
@@ -40,7 +41,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vitest": "^0.32.0"
   },
   "files": [
     "dist",
