ENG-4908 add wip readme file

--- a/packages/entando-mfecommunication/package.json
+++ b/packages/entando-mfecommunication/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entando-mfecommunication",
+  "name": "@entando/entando-mfecommunication",
   "private": true,
   "version": "1.0.0",
   "type": "module",
